# notifier

./: .gitignore  Cargo.toml  LICENSE
src/: cli.rs  domain.rs  infrastructure.rs  main.rs
src/domain/source/: mod.rs  model.rs  repository.rs  source_type.rs
src/source/: mod.rs  rss.rs
