[package]
name = "notifier"
version = "0.1.0"
authors = ["Dmitry Shemin <shemindmitry@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "^0.4", features = ["serde"] }
clap = "^2.33"
colored = "^2.0"
eyre = "^0.6"
prettytable-rs = "^0.8"
reqwest = { version = "^0.10", features = ["blocking"] }
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "0.8.13"
syndication = "^0.5"
